# the-builder-path-0518

./: .gitignore  agent.py  fastagent.config.yaml  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: default.mdc
src/demo-agent/: agent.py  fastagent.config.yaml  fastagent.jsonl  pyproject.toml
src/fastapi-mcp-server/: 00_basic_usage.py  01_basic_usage.py  03_custom_exposed_endpoints.py  pyproject.toml
src/fastapi-mcp-server/shared/apps/: ch4.py  items.py
src/time-mcp-server/: Dockerfile  README.md  pyproject.toml  server.py
